Fix that test plugin can be executed in JDK9+
Signed-off-by: Alexander Lowey - Weber <alexander.weber@here.com>